<resources>
    <string name="app_name">common_datasource</string>
    <string name="navigation_list_patients">Seznam pacientů</string>
    <string name="list_patients_add_new_patient">Přidat pacienta</string>
    <string name="list_patients_switch">Přepnout</string>
    <string name="list_patients_no_birthdate">Bez narození</string>
    <string name="action_detail">Otevřít</string>
    <string name="action_edit">Upravit</string>
    <string name="action_export">Export</string>
    <string name="action_delete">Smazat</string>
    <string name="action_undo">Obnovit</string>
    <string name="patient_deleted">Pacient %s byl smazán</string>
    <string name="delete_patient">Smazání pacienta</string>
    <string name="action_cancel">Zrušit</string>
    <string name="delete_patient_message">Potvrzením dojde k smazáním všech dat pacienta \"%s\". Tento krok je nezvratný!</string>
    <string name="addedit_error">Při správě pacienta došlo k chybě</string>
    <string name="addedit_saved">Pacient \"%s\" byl úspěšně uložen!</string>
    <string name="navigation_add_edit_patient">Přidání pacienta</string>
    <string name="label_addedit_patient_name">Jméno</string>
    <string name="action_save">Uložit</string>
    <string name="field_error_empty">Toto pole musí být vyplněno</string>
    <string name="helper_required">Povinné pole</string>
    <string name="navigation_list_healthcare_label">Seznam lék. zařízení</string>
    <plurals name="document">
        <item quantity="zero">dokumentů</item>
        <item quantity="one">dokument</item>
        <item quantity="few">dokumenty</item>
        <item quantity="many">dokumentů</item>
        <item quantity="other">dokumentů</item>
    </plurals>
    <plurals name="medicalWorkers">
        <item quantity="zero">pracovníků</item>
        <item quantity="one">pracovník</item>
        <item quantity="few">pracovníci</item>
        <item quantity="many">pracovníků</item>
        <item quantity="other">pracovníků</item>
    </plurals>
    <string name="fragment_worker">Pracovníci</string>
    <string name="fragment_facility">Zařízení</string>
    <string name="add_medical_worker">Přidat zdravotního pracovníka</string>
    <string name="add_worker">Přidat pracovníka</string>
    <string name="field_medical_worker_name">Jméno pracovníka</string>
    <string name="action_add">Přidat</string>
    <string name="navigation_add_edit_medical_worker">{action} lék. pracovníka</string>
    <string name="field_medical_facilities">Lékařská zařízení</string>
    <string name="description_delete_facility">Odebrat lékařské zařízení od lékařského pracovníka</string>
    <string name="facility_info_address">Adresa</string>
    <string name="facility_info_facility_type">Typ zařízení</string>
    <string name="facility_info_telephone">Telefon</string>
    <string name="field_medical_facility">Lékařské zařízení</string>
    <string name="field_telephone">Telefon</string>
    <string name="field_email">Email</string>
    <string name="search_hint_facility">Jméno zařízení, město…</string>
    <string name="no_results">Žádné výsledky</string>
    <string name="error_possibly_connection">Chyba. Zkontrolujte Vaše připojení k internetu</string>
    <string name="field_service">Zdravotní služba</string>
    <string name="field_details">Kontaktní údaje</string>
    <string name="error_required">Toto pole je povinné</string>
    <string name="description_select_facility">Výběr lékařského zařízení</string>
    <string name="description_select_medical_service">Výběr zdravotní služby v daném zařízení</string>
    <string name="description_worker_telephone">Telefoní číslo zdravotnického pracovníka pro dané zařízení</string>
    <string name="description_worker_email">E-mail zdravotnického pracovníka pro dané zařízení</string>
    <string name="helper_optional">Volitelné pole</string>
    <string name="dialog_delete_facility_title">Smazat kontakt</string>
    <string name="dialog_delete_facility_message">Přejete si smazat kontakt pro zařízení \"%s\"?</string>
    <string name="dialog_delete_facility_done">Kontakt smazán</string>
    <string name="save_medical_worker">Uložit lékařského pracovníka</string>
    <string name="error_missing_fields">Prosím, opravte chybné položky</string>
    <string name="error_cannot_save">Při ukládání se vyskytla chyba.</string>
    <string name="no_medical_workers">Žádní zdravotní pracovníci</string>
    <string name="dialog_delete_medical_worker_title">Smazat lék. pracovníka</string>
    <string name="dialog_delete_medical_worker_message">Přejete si smazat lék. pracovníka \"%s\"? Tato volba nesmaže zprávy, které tento pracovník vydal.</string>
    <string name="medical_worker_deleted">Lékařský pracovník smazán</string>
    <string name="medical_facilities_count">%d lék. zařízení</string>
    <string name="medical_workers_count">%d lék. %s</string>
    <string name="no_medical_facility">Žádná zdravotnická zařízení</string>
    <string name="navigation_list_problem_category">Kategorie problémů</string>

    <string name="label_color_category_a">modrá</string>
    <string name="label_color_category_b">hnědá</string>
    <string name="label_color_category_c">tmavě fialová</string>
    <string name="label_color_category_d">žlutá</string>
    <string name="label_color_category_e">tyrkysová</string>
    <string name="label_color_category_f">vínová</string>
    <string name="label_color_category_g">šedivá</string>
    <string name="label_color_category_h">červená</string>
    <string name="label_color_category_i">zelená</string>
    <string name="field_problem_category_name">Název kategorie</string>
    <string name="save_problem_category">Uložit kategorii problému</string>
    <string name="description_color">Výběr barvy</string>
    <string name="field_color">Barva</string>
    <string name="navigation_add_edit_problem_category">{action} kategorii</string>
    <string name="delete_problem_category">Smazat kategorii</string>
    <string name="delete_problem_category_message">K této kategorii mohou být vázána další data.\n\nCo se s těmito daty má po smazání kategorie stát?</string>
    <string name="action_delete_move_to">Smazat a zachovat</string>
    <string name="action_delete_delete_data">Smazat i data</string>
    <string name="action_no_delete_default_category">Nelze smazat výchozí kategorii</string>
    <string name="problem_category_deleted">Kategorie byla smazána!</string>
    <string name="problem_category_delete_failed">Nepodařilo se smazat kategorii!</string>
    <string name="field_medical_record_date">Datum zprávy</string>
    <string name="add_problem_category">Přidat kategorii</string>
    <string name="frequency_every_day">Každý den</string>
    <string name="frequency_custom">Vlastní</string>

    <string name="time_left_days">Zbývá %1$dd a %2$dh</string>
    <string name="time_left_hours">Zbývá %1$dh a %2$dm</string>
    <string name="time_left_minutes">Zbývá %1$dm a %2$ds</string>
    <string name="next_schedule_multiple_items">Více položek</string>
    <string name="next_schedule_label">Další plán</string>
    <string name="next_schedule_no_schedule">Nemáte nic naplánováno</string>
    <string name="end_icon_entry_date">Kliknutím si otevřete dialog pro výběr data</string>
    <string name="end_icon_entry_time">Kliknutím si otevřete dialog pro výběr času</string>
    <string name="field_date">Datum</string>
    <string name="navigation_detail_problem_category">Detail kategorie problému</string>
    <string name="medicine_date_from">od %s</string>
    <string name="medicine_date_to">do %s</string>
    <string name="navigation_detail_medical_worker">Detail lék. pracovníka</string>
    <string name="action_contact_phone">Zkopírovat</string>
    <string name="copied">Zkopírováno</string>
    <string name="action_contact_email">Zkopírovat</string>
    <string name="action_contact_address">Zkopírovat</string>
    <string name="save_patient">Uložit pacienta</string>
    <string name="problem_category_detail_created_at">vytvořeno %s</string>
    <string name="problem_category_detail_updated_at">upraveno %s</string>
    <string name="problem_category_detail_updated_at_empty">zatím neupraveno</string>
    <string name="error_no_data_to_export">Žádná data k exportování</string>
</resources>
