<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BaseFrontBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/box_background_light">

    <cz.vvoleman.phr.common.ui.component.facilitySelector.FacilitySelector
        android:id="@+id/facility_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_select_facility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_services"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/facility_selector"
        android:contentDescription="@string/description_select_medical_service"
        app:errorEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text_view_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_service"
            android:inputType="none"
            android:labelFor="@id/text_input_layout_services" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_telephone"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout_services"

        android:contentDescription="@string/description_worker_telephone"
        app:errorEnabled="true"
        app:helperText="@string/helper_optional"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/field_telephone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout_telephone"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/description_worker_email"
        app:errorEnabled="true"
        app:helperText="@string/helper_optional"

        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/field_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_layout_email"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/red_700"
        android:contentDescription="@string/description_delete_facility"
        android:text="@string/action_delete"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>
