<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/layout_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cz.vvoleman.phr.common.ui.view.problemCategory.addEdit.AddEditProblemCategoryFragment"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        style="@style/BaseFrontBox"
        android:backgroundTint="@color/box_background_light"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_problem_category_name"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_problem_category_name"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_problem_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_colors"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_color"
            app:errorEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_color"
                android:inputType="none"
                android:labelFor="@id/text_input_layout_colors" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_500"
            android:clickable="true"
            android:contentDescription="@string/save_problem_category"
            android:elevation="4dp"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/action_save"
            android:textColor="@color/white"
            app:icon="@drawable/ic_add"
            app:iconGravity="textStart"
            app:iconTint="@color/white" />
    </LinearLayout>

</LinearLayout>
